Fixes a french translation
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1564 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -239,7 +239,7 @@ fra:
           check:
             name: 'Chèque'
           transfer:
-            name: 'Virement sur compte bancaire'
+            name: 'Virement'
         sample_product_name: 'Produit Exemple'
         sequences:
           management:
