Fixes some bugs
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1566 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/general.yml
+++ b/config/locales/eng/general.yml
@@ -250,7 +250,7 @@ eng:
           check:
             #>name: 'Chèque'
           transfer:
-            #>name: 'Virement sur compte bancaire'
+            #>name: 'Virement'
         #>sample_product_name: 'Produit Exemple'
         sequences:
           management:
