--- a/config/locales/jpn/general.yml
+++ b/config/locales/jpn/general.yml
@@ -248,7 +248,7 @@ jpn:
           check:
             #>name: 'Chèque'
           transfer:
-            #>name: 'Virement sur compte bancaire'
+            #>name: 'Virement'
         #>sample_product_name: 'Produit Exemple'
         sequences:
           management:
