--- a/config/locales/spa/general.yml
+++ b/config/locales/spa/general.yml
@@ -247,7 +247,7 @@ spa:
           check:
             #>name: 'Chèque'
           transfer:
-            #>name: 'Virement sur compte bancaire'
+            #>name: 'Virement'
         #>sample_product_name: 'Produit Exemple'
         sequences:
           management:
