Some bugs again
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1569 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/jpn/general.yml
+++ b/config/locales/jpn/general.yml
@@ -443,6 +443,8 @@ jpn:
         #>not_equal_cs: 'N''est pas égal à (sensible à la casse)'
         #>not_finishes: 'Ne se termine pas par'
         #>not_finishes_cs: 'Ne se termine pas par (sensible à la casse)'
+        #>nvn: 'N''est pas vide'
+        #>vn: 'Est vide'
       comparison:
         #>with_value: '{{comparator}} {{value}}'
         #>without_value: '{{comparator}}'
