Fixes some stuff in order to upgrade to Rails 3 INSTABLE
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1579 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -14,6 +14,7 @@ fra:
         included_in: 'La valeur de {{attribute}} doit être comprise entre {{minimum}} et {{maximum}}'
         inclusion: '{{attribute}} n''est pas inclus dans la liste'
         invalid: '{{attribute}} est invalide'
+        record_invalid: '{{attribute}} est invalide'
         invalid_at: '{{attribute}} est invalide. Erreur près de {{error}}'
         invalid_token: '{{attribute}} est invalide. Symbole inconnu {{error}}. Les symboles acceptés sont {{accepted}}.'
         less_than: '{{attribute}} doit être inférieur à {{count}}'
