Fixes some translation in order to complete register process
git-svn-id: https://www.ekylibre.org/svn/ekylibre/branches/0.2-stable@1582 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -150,7 +150,7 @@ eng:
         #>charges_accounts: 'Comptes de charge'
         #>choice_complements: 'Chmaps complémentaires "liste de choix"'
         #>client_accounts: 'Comptes clients'
-        #>code: 'Code interne'
+        code: 'Code'
         #>complement_choices: 'Choix de champ complémentaire'
         #>complement_data: 'Données complémentaires de fiche'
         #>complements: 'Champs complémentaires'
@@ -2182,22 +2182,22 @@ eng:
         #>establishment: 'Établissement'
         #>establishment_id: 'Établissement'
         #>events: 'Évènements'
-        #>first_name: 'Prénom'
+        first_name: First name
         #>full_name: 'Nom complet'
         #>future_events: 'Evènements futurs'
         #>hashed_password: 'Mot de passe crypté'
         id: 'ID'
         #>language: 'Langue'
-        #>last_name: 'Nom de famille'
+        last_name: 'Last name'
         lock_version: 'Version'
         #>locked: 'Compte verrouillé'
-        #>name: 'Nom d''utilisateur'
+        name: 'User name'
         #>office: 'Bureau/Atelier'
         #>old_password: 'Mot de passe actuel'
         #>operations: 'Travaux'
         #>parameters: 'Paramètres'
-        #>password: 'Mot de passe'
-        #>password_confirmation: 'Confirmation du mot de passe'
+        password: 'Password'
+        password_confirmation: 'Confirmation of password'
         #>profession: 'Profession'
         #>profession_id: 'Profession'
         #>reduction_percent: 'Taux de réduction autorisé (%)'
