--- a/config/locales/fra/notifications.yml
+++ b/config/locales/fra/notifications.yml
@@ -1,8 +1,8 @@
 fra:
   notifications:
-    access_denied: 'Vous n''avez pas le droit d''accéder à cette page. {{reason}} ({{url}})'
+    access_denied: 'Vous n''avez pas le droit d''accéder à cette page. %{reason} (%{url})'
     accountizing_is_finished: 'La bascule en comptabilité est finie.'
-    accountizing_works_only_with: 'La bascule en comptabilité ne peut se faire actuellement que pour : {{list}}.'
+    accountizing_works_only_with: 'La bascule en comptabilité ne peut se faire actuellement que pour : %{list}.'
     bad_file: 'Le fichier ne semble pas correspondre.'
     cannot_delete_entity: 'Il n''est pas possible de supprimer cette fiche car elle possède un historique comptable'
     cannot_merge_an_entity_with_itself: 'Il n''est pas possible de fusionner une fiche avec elle-même'
@@ -13,23 +13,23 @@ fra:
     columns_are_already_uses: 'Une ou plusieurs colonnes à importer sont sélectionnées plusieurs fois'
     draft_entries_are_validated: 
       one: 'La pièce a été validée et sortie du brouillard'
-      other: 'Les {{count}} pièces ont été validées et sorties du brouillard'
+      other: 'Les %{count} pièces ont été validées et sorties du brouillard'
       zero: 'Aucune pièce n''a été validée'
 
     entity_columns_are_needed: 'Vous devez spécifier au moins une colonne pour la personne et notamment son nom.'
-    exception_raised: 'Une erreur est survenue durant le traitement : {{message}}'
+    exception_raised: 'Une erreur est survenue durant le traitement : %{message}'
     expired_session: 'Session expirée. Veuillez vous reconnecter.'
-    fails_to_extract_listing: 'L''extraction n''a pas pu s''effectuer : {{message}}'
+    fails_to_extract_listing: 'L''extraction n''a pas pu s''effectuer : %{message}'
     import_succeeded: 'Vos données ont été correctement importées'# NOT USED !!!
     importation_cancelled: 'Vos données n''ont été pas été importées. L''importation a été annulée'
     importation_finished: 'L''importation est terminée.'
     impossible_to_add_lines: 'Vous ne pouvez plus ajouter de produits à votre vente, le devis est passé en commande'
     impossible_to_add_lines_to_purchase: 'Vous ne pouvez plus ajouter de produits à votre achat'
     invalid_file_nature: 'Type de fichier invalide'
-    journal_closed_on: 'Le {{journal}} a été clôturé au {{closed_on}} correctement.'
+    journal_closed_on: 'Le %{journal} a été clôturé au %{closed_on} correctement.'
     journal_record_already_validated: 'La pièce a déjà été validée et ne peut plus être modifiée'
-    journal_record_has_been_saved: 'La pièce N°{{number}} a été enregistrée correctement'
-    journal_reopened_on: 'Le {{journal}} a été déclôturé au {{closed_on}} correctement.'
+    journal_record_has_been_saved: 'La pièce N°%{number} a été enregistrée correctement'
+    journal_reopened_on: 'Le %{journal} a été déclôturé au %{closed_on} correctement.'
     mails_are_sent: 'Les courriels ont été envoyés'
     need_balanced_journal_to_tax_declaration: 'Tous vos journaux doivent être clôturés et équilibrés à cette date.'
     need_cash_to_record_statements: 'Vous devez avoir au moins créer un compte bancaire pour pouvoir saisir un relevé de compte.'
@@ -45,7 +45,7 @@ fra:
     need_stocks_location_to_create_products: 'Vous devez créer un lieu de stockage pour pouvoir créer un produit'
     need_stocks_to_create_inventories: 'Vous devez gérer les stocks d''au moins un produit pour pouvoir faire un inventaire'
     need_to_create_subscription_nature: 'Vous devez créer un type d''abonnement pour pouvoir gérer vos abonnements'
-    new_actual_number: 'Le nouveau numéro en cours est {{actual_number}}'
+    new_actual_number: 'Le nouveau numéro en cours est %{actual_number}'
     no_authenticated: 'Vous n''avez pas pu être identifié. Le nom d''utilisateur ou le mot de passe doit être incorrect.'
     no_balance_template: 'Pas de modèle de document pour la balance'
     no_closable_financialyear: 'Vous n''avez aucun exercice à clôturer.'
@@ -63,26 +63,26 @@ fra:
     no_unvalidated_operations: 'Aucun travail à réaliser'
     password_successfully_changed: 'Votre mot de passe a été mis à jour avec succès'
     prices_import_succeeded: 'Vos données ont été correctement importées'
-    print_failure: 'Impossible d''imprimer. Essayer de recharger les modèles de documents pour corriger le problème. {{error}} ({{class}}).'
+    print_failure: 'Impossible d''imprimer. Essayer de recharger les modèles de documents pour corriger le problème. %{error} (%{class}).'
     record_cannot_be_removed: 'L''enregistrement ne peut pas être supprimé'
     record_has_been_correctly_removed: 'L''enregistrement a été supprimé correctement'
     record_has_not_been_removed: 'L''enregistrement n''a pas être supprimé correctement'
-    restoration_finished: 'La restauration de la sauvegarde s''est terminée (en {{value}} secondes). Votre code société est {{code}}'
+    restoration_finished: 'La restauration de la sauvegarde s''est terminée (en %{value} secondes). Votre code société est %{code}'
     sale_order_already_invoiced: 'La vente a déjà été facturée: vous ne pouvez pas définir de livraison'
     sale_order_cannot_be_updated: 'Le devis n''est plus modifiable.'
     sale_order_cant_be_deleted: 'La vente ne peut plus être supprimée'
     select_entries_to_letter_together: 'Sélectionnez des écritures à lettrer ensemble'
     specify_filter: 'Vous choisir appliquer au moins un filtre de recherche'
     specify_updates: 'Vous devez spécifier au moins un champ à modifier'
-    unavailable_model: '{{model}} indisponible ou inexistante ({{id}})'
-    unknown_action: 'La page demandée est indisponible ({{url}})'
+    unavailable_model: '%{model} indisponible ou inexistante (%{id})'
+    unknown_action: 'La page demandée est indisponible (%{url})'
     unknown_company: 'Société inconnue'
     unvalid_version_for_restore: 'La version du logiciel utilisé pour effectuer la sauvegarde ne correspond pas à la version actuelle du logiciel'
     update_is_done: 'La mise à jour a été effectuée'
     validates_old_inventories: 'Il est conseillé de supprimer ou de valider les inventaires non validés avant d''en faire un nouveau'
     x_unpointed_journal_entries: 
       one: 'Il y a une écriture à pointer'
-      other: 'Il y a {{count}} écritures à pointer'
+      other: 'Il y a %{count} écritures à pointer'
       zero: 'Il n''y a pas d''écritures à pointer pour l''instant'
 
     you_must_have_an_email_column: 'Vous devez avoir une colonne Email dans votre extraction'
