--- a/config/locales/fra/pack.application.yml
+++ b/config/locales/fra/pack.application.yml
@@ -4,9 +4,9 @@ fra:
       title: 'Application'
   helpers:
     application:
-      default_title: 'Ekylibre - {{controller}} - {{action}}'
+      default_title: 'Ekylibre - %{controller} - %{action}'
       exit: 'Se déconnecter'
-      print: 'Imprimer {{name}}'
-      title: '{{company_code}} - {{controller}} - {{action}}'
+      print: 'Imprimer %{name}'
+      title: '%{company_code} - %{controller} - %{action}'
   views:
     application:
