--- a/config/locales/fra/pack.help.yml
+++ b/config/locales/fra/pack.help.yml
@@ -8,7 +8,7 @@ fra:
     help:
       _search:
         ekylibre: 'www.ekylibre.org'
-        error_no_file: 'Aucune aide n''est disponible pour cette partie de l''application ({{article}}). L''aide n''a pas encore été rédigée. Vous pouvez consulter le site en ligne pour plus d''informations.'
+        error_no_file: 'Aucune aide n''est disponible pour cette partie de l''application (%{article}). L''aide n''a pas encore été rédigée. Vous pouvez consulter le site en ligne pour plus d''informations.'
         home: 'Retour à l''accueil de l''aide'
         missing_help: 'Page inexistante'
         title: 'Aide'
